--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -184,10 +184,10 @@
                                             <rect key="frame" x="60" y="330" width="300" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="33T-P4-oX9"/>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="6FO-ei-bwB"/>
+                                                <constraint firstAttribute="width" constant="300" id="6FO-ei-bwB"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="join"/>
+                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="join"/>
                                             <connections>
                                                 <outlet property="delegate" destination="VKq-4v-Yvp" id="k2G-pz-ly6"/>
                                             </connections>
